# realty_desktop

./: .gitignore  .gitignore.public  CMakeLists.txt  README.md  main.cpp  pubpu.sh
src/cpp/: ModSvg.cpp  ModSvg.h  ThemeController.cpp  ThemeController.h  Translator.cpp  Translator.h
src/qml/: App.qml  Main.qml
src/qml/components/: Avatar.qml  InnerPage.qml  RoundedImage.qml  RoundedImage_.qml  TabView.qml  Table.qml
src/qml/features/: features.qrc
src/qml/features/CommunityPage/: CommunityLeadsList.qml  CommunityPage.qml  CommunityPropertiesList.qml
src/qml/features/LeadPage/: LeadCommunitiesList.qml  LeadPage.qml  LeadPropertiesList.qml
src/qml/features/PropertyPage/: PropertyCommunitiesList.qml  PropertyLeadsList.qml  PropertyPage.qml
src/qml/features/Sidebar/: Sidebar.qml  SidebarMenuItem.qml
src/qml/pages/: pages.qrc
src/qml/pages/Communities/: Communities.qml  CommunitiesList.qml  CommunitiesOverview.qml
src/qml/pages/Dashboard/: Dashboard.qml  Notifications.qml  QuickLinkCard.qml
src/qml/pages/Leads/: Leads.qml  LeadsList.qml  LeadsOverview.qml
src/qml/pages/Marketing/: Marketing.qml  MarketingList.qml  MarketingOverview.qml
src/qml/pages/Payments/: Payments.qml  PaymentsList.qml
src/qml/pages/Personnel/: Personnel.qml
src/qml/pages/ProfileSettings/: ProfileSettings.qml
src/qml/pages/Properties/: Properties.qml
src/qml/pages/Support/: Support.qml  SupportList.qml
src/qml/singletons/: AppBus.qml  Style.qml
src/resources/audios/: audios.qrc
src/resources/fonts/: fonts.qrc
src/resources/images/: images.qrc
src/resources/videos/: videos.qrc
src/shaders/: roundedimage.frag  roundedimage.frag.qsb  shaders.qrc
translations/: app_en.ts  app_fr.ts
z./: OverviewPage (Copy).qml
